apps/openarchiver/meilisearch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: openarchiver
spec:
  selector:
    app: meilisearch
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: 7700
      name: meili
      protocol: TCP
