apps/openarchiver/openarchiver.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openarchiver
  namespace: openarchiver
spec:
  selector:
    app: openarchiver
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: web
      protocol: TCP
