apps/openarchiver/tika.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: openarchiver
spec:
  selector:
    app: tika
  type: ClusterIP
  ports:
    - port: 9998
      targetPort: 9998
      name: tika
      protocol: TCP
